package com.design.decorater.example;

public class HouseBlend extends Beverage {
	public HouseBlend() {
		description = "하우스블렌드";
	}
 
	public double cost() {
		return .89;
	}
}

